BUG#23526 - show table status reports incorrect values for MyISAM tables

This problem could happen when show table status get outdated copy
of TABLE object from table cache.

MyISAM updates state info when external_lock() method is called. Though
I_S does not lock a table to avoid deadlocks. If I_S opens a table which
is in a table cache it will likely get outdated state info copy.

In this case shared state copy is more recent than local copy. This problem
is fixed by correctly restoring myisam state info pointer back to original
value, that is to shared state.

Affects MyISAM only. No good deterministic test case for this fix.


include/thr_lock.h:
  Added restore_status, that will be called prior to release a
  read lock.
myisam/mi_locking.c:
  Added mi_restore_status, that will be called prior to release a
  read lock. This function is intended to set myisam state pointer
  back to original value, that is to shared state.
myisam/mi_open.c:
  Added restore_status, that will be called prior to release a
  read lock.
myisam/myisamdef.h:
  Added mi_restore_status, that will be called prior to release a
  read lock.
mysys/thr_lock.c:
  Call restore_status if we have lock with priority lower than
  TL_WRITE_CONCURRENT_INSERT.